--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /node_modules
 #/public/hot
-#/public/storage
+/public/storage
 /storage/*.key
 /vendor
 .DS_Store
@@ -55,3 +55,4 @@ storage/framework/laravel-excel/
 .phpactor.json
 
 storage/framework/maintenance.php
+/public/storage/
